--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-
-:root{
-  --Yellow: hsl(47, 88%, 63%);
-  --White: hsl(0, 0%, 100%);
-  --Gray-500: hsl(0, 0%, 42%);
-  --Gray-950: hsl(0, 0%, 7%);
-}
-
 @font-face {
   font-family: Figtree;
   font-style: normal;
@@ -19,14 +11,23 @@
   src: url("../assets/fonts/Figtree-VariableFont_wght.ttf") format("woff2");
 }
 
+:root{
+  --Yellow: hsl(47, 88%, 63%);
+  --White: hsl(0, 0%, 100%);
+  --Gray-500: hsl(0, 0%, 42%);
+  --Gray-950: hsl(0, 0%, 7%);
+  --Font-Figtree: 'Figtree';
+}
+
+
 body{
   background-color: var(--Yellow);
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  font-family: 'Figtree';
-  font-size: 16px;
+  font-family: var(--Font-Figtree);
+  /* font-size: 16px; */
   color: var(--Gray-950);
 }
 
@@ -48,11 +49,11 @@ body{
   }
   & .label{
     background-color: var(--Yellow);
-    margin-bottom: 12px;
     padding: 4px 12px;
     border-radius: 4px;
     display: inline-block;
     font-weight: 800;
+    margin-bottom: 12px;
   }
   & .date{
     font-size: 12px;
@@ -65,7 +66,6 @@ body{
   }
   & .description{
     font-size: 14px;
-    font-weight: 400;
     color: var(--Gray-500);
     line-height: 1.5;
     margin-bottom: 24px;
@@ -73,7 +73,7 @@ body{
   & .author{
     display: flex;
     align-items: center;
-    font-size: 14px;
+    /* font-size: 14px; */
     & img{
       width: 32px;
       border-radius: 50%;
